--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="ko" xmlns:th="http://www.thymeleaf.org">
 <head>
@@ -12,8 +11,8 @@
     <link rel="canonical" href="https://getbootstrap.kr/docs/5.1/examples/album/">
 
 
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- Favicons -->
     <link rel="apple-touch-icon" href="/docs/5.1/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
     <link rel="icon" href="/docs/5.1/assets/img/favicons/favicon-32x32.png" sizes="32x32" type="image/png">
@@ -43,7 +42,35 @@
             padding-top: 90px;
 
         }
+        img {
+            margin: 0;
+        }
 
+        .card {
+            padding: 0px;
+            margin: 10px;
+        }
+
+        .btn-group {
+            margin: 0px;
+            float: right;
+
+        }
+
+        .card-body {
+            padding: 0px;
+            margin-right: 3px;
+            margin-left: 3px;
+        }
+
+
+        form {
+            margin: 0;
+            padding: 0;
+        }
+        .pagename{
+            margin-bottom: 10px;
+        }
     </style>
 
 
@@ -60,12 +87,13 @@
 <main>
 
 
-
     <section class="py-5 text-center container">
         <div class="row py-lg-5">
             <div class="col-lg-6 col-md-8 mx-auto">
                 <h1 class="fw-light">Album example</h1>
-                <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don’t simply skip over it entirely.</p>
+                <p class="lead text-muted">Something short and leading about the collection below—its contents, the
+                    creator, etc. Make it short and sweet, but not too short so folks don’t simply skip over it
+                    entirely.</p>
                 <p>
                     <a href="#" class="btn btn-primary my-2">Main call to action</a>
                     <a href="#" class="btn btn-secondary my-2">Secondary action</a>
@@ -77,40 +105,37 @@
 
     <div class="album py-5 bg-light">
         <div class="container">
-
+            <h2 class="pagename"><b> 상품 랭킹</b></h2>
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-                <div class="col">
-                    <div class="card shadow-sm">
-                        <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
 
-                        <div class="card-body">
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                            <div class="d-flex justify-content-between align-items-center">
-                                <div class="btn-group">
-                                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                                </div>
-                                <small class="text-muted">9 mins</small>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card shadow-sm">
-                        <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
 
-                        <div class="card-body">
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-                            <div class="d-flex justify-content-between align-items-center">
-                                <div class="btn-group">
-                                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                                </div>
-                                <small class="text-muted">9 mins</small>
-                            </div>
+                <div class="card" style="width: 18rem;" th:each="product:${list}">
+                    <a th:href="@{/shopping/product_info(product_code=${product.product_code})}" style="height: 60%">
+                    <img th:src="${product.product_img1}" class="card-img-top" alt="..." style="height: 100%">
+                    </a>
+                    <div class="card-body">
+                        <p class="card-text">
+                        <p th:text="${product.product_name}"></p>
+                        <b th:text="|${#numbers.formatInteger(product.product_price,3,'COMMA')} 원|"></b>
+                        </p>
+                        <div class="btn-group" th:unless="${session.admin==null}">
+                            <form method="post">
+                                <input type="hidden" id="product_code" name="product_code"
+                                       th:value="${product.product_code}">
+
+                                <button type="submit" id="modify_btn" class="btn btn-sm btn-outline-secondary">상품 수정
+                                </button>
+
+                                <button type="submit" id="del_btn" class="btn btn-sm btn-outline-secondary">상품 삭제
+                                </button>
+                            </form>
                         </div>
+
                     </div>
+
                 </div>
+
+
             </div>
         </div>
     </div>
@@ -123,10 +148,13 @@
             <a href="#">Back to top</a>
         </p>
         <p class="mb-1">Album example is &copy; Bootstrap, but please download and customize it for yourself!</p>
-        <p class="mb-0">New to Bootstrap? <a href="/static">Visit the homepage</a> or read our <a href="/docs/5.1/getting-started/introduction/">getting started guide</a>.</p>
+        <p class="mb-0">New to Bootstrap? <a href="/static">Visit the homepage</a> or read our <a
+                href="/docs/5.1/getting-started/introduction/">getting started guide</a>.</p>
     </div>
 </footer>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </body>
 </html>
