--- a/src/main/resources/templates/template/nav_bar.html
+++ b/src/main/resources/templates/template/nav_bar.html
@@ -3,46 +3,87 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+
 </head>
 <body>
-    <div class="container-fluid" th:fragment="navbar">
-        <a class="navbar-brand" href="#">Navbar</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-                aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                       data-bs-toggle="dropdown" aria-expanded="false">
-                        Dropdown
-                    </a>
-                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="#">Action</a></li>
-                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                        <li>
-                            <hr class="dropdown-divider">
+<div class="container-fluid" th:fragment="navbar">
+    <a class="navbar-brand" href="#">Navbar</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+            aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <div class="dropdown">
+                <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    상의
+                </a>
+
+                <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" th:href="@{/shopping/product_search(division_lType=상의)}">상의</a></li>
+                    <li class="seperator"></li>
+                    <th:block th:each="list:${divisionList}">
+                    <li th:if="${list.division_lType=='상의'}">
+                        <a class="dropdown-item" th:href="@{/shopping/product_search(division_mType=${list.division_mType})}"
+                        th:text="${list.division_mType}">Action</a>
+                    </li>
+                    </th:block>
+                </ul>
+            </div>
+
+            <div class="dropdown">
+                <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    상의
+                </a>
+
+                <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" th:href="@{/shopping/product_search(division_lType=하의)}">하의</a></li>
+                    <li class="seperator"></li>
+                    <th:block th:each="list:${divisionList}">
+                        <li th:if="${list.division_lType=='하의'}">
+                            <a class="dropdown-item" th:href="@{/shopping/product_search(division_mType=${list.division_mType})}"
+                               th:text="${list.division_mType}">Action</a>
                         </li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
-                    </ul>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link disabled">Disabled</a>
-                </li>
-            </ul>
-            <form class="d-flex">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
-        </div>
+                    </th:block>
+                </ul>
+            </div>
+
+            <div class="dropdown">
+                <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    아우터
+                </a>
+
+                <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" th:href="@{/shopping/product_search(division_lType=아우터)}">아우터</a></li>
+                    <li class="seperator"></li>
+                    <th:block th:each="list:${divisionList}">
+                        <li th:if="${list.division_lType=='아우터'}">
+                            <a class="dropdown-item" th:href="@{/shopping/product_search(division_mType=${list.division_mType})}"
+                               th:text="${list.division_mType}">Action</a>
+                        </li>
+                    </th:block>
+                </ul>
+            </div>
+
+
+        <form class="d-flex">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Search</button>
+        </form>
+        </ul>
     </div>
+
+    <style>
+
+        .seperator { /* 풀다운 메뉴에 선 긋기 */
+            height: 1px;
+            padding: 0;
+            margin: 4px 0;
+            border-top: 1px solid #ccc;
+        }
+
+    </style>
+</div>
 </body>
 </html>
