--- a/src/main/resources/templates/shopping/product_info.html
+++ b/src/main/resources/templates/shopping/product_info.html
@@ -42,18 +42,25 @@
         img {
             margin: 0;
         }
-        h2{
+
+        h2 {
             margin-bottom: 20px;
         }
-        h3{
+
+        h3 {
             margin-bottom: 30px;
         }
-        .btn-group{
+
+        .btn-group {
             margin-top: 50px;
         }
-        button{
-            float:bottom;
+
+        button {
+            float: bottom;
             margin-right: 10px;
+        }
+        .quantity_class{
+            margin-top: 30px;
         }
     </style>
 
@@ -62,11 +69,9 @@
 
 </head>
 <body>
-<th:block th:unless="${session.isEmpty()}">
-    <header th:if="${session.admin==null}" th:insert="~{template/header :: user_mainbar}"></header>
-    <header th:if="${session.user==null}" th:insert="~{template/header :: admin_mainbar}"></header>
-</th:block>
-<header th:if="${session.isEmpty()}" th:insert="~{template/header :: no_user_mainbar}"></header>
+<header th:if="${session.admin!=null}" th:insert="~{template/header :: admin_mainbar}"></header>
+<header th:if="${session.user!=null}" th:insert="~{template/header :: user_mainbar}"></header>
+<header th:if="${session.admin==null && session.user==null}" th:insert="~{template/header :: no_user_mainbar}"></header>
 
 <main>
     <div class="container">
@@ -74,31 +79,44 @@
             <div class="col-7">
                 <div class="text-center">
                     <img th:src="${product.product_img1}" class="rounded" alt="..."
-                    style="width: 80%" >
+                         style="width: 80%">
                 </div>
             </div>
             <div class="col-3">
                 <h2 th:text="${product.product_name}"></h2>
-                <h2><b th:text="|${#numbers.formatInteger(product.product_price,3,'COMMA')} 원|" style="color: #dc3545"></b></h2>
+                <h2><b th:text="|${#numbers.formatInteger(product.product_price,3,'COMMA')} 원|"
+                       style="color: #dc3545"></b></h2>
                 <hr>
-                <form>
-                <h3>옵션 선택</h3>
-                <select class="form-select" aria-label="Default select example">
-                    <option selected>size</option>
-                    <th:block th:each="size:${size}">
-                        <option th:value="${size}" th:text="${size}"></option>
-                    </th:block>
-                </select>
-                <select class="form-select" aria-label="Default select example">
-                    <option selected>color</option>
-                    <th:block th:each="color:${color}">
-                        <option th:value="${color}" th:text="${color}"></option>
-                    </th:block>
-                </select>
-                <div class="btn-group">
-                    <button type="button" id="basket_btn" class="btn btn-outline-primary btn-lg">장바구니</button>
-                    <button type="submit" id="order_btn" class="btn btn-outline-primary btn-lg">주문하기</button>
-                </div>
+                <form method="post">
+                    <input type="hidden" id="product_code" name="product_code" th:value="${product.product_code}">
+                    <h3>옵션 선택</h3>
+                    <select class="form-select" aria-label="Default select example" name="size" id="size">
+                        <option selected>size</option>
+                        <th:block th:each="size:${size}">
+                            <option th:value="${size}" th:text="${size}"></option>
+                        </th:block>
+                    </select>
+                    <select class="form-select" aria-label="Default select example" name="color" id="color">
+                        <option selected>color</option>
+                        <th:block th:each="color:${color}">
+                            <option th:value="${color}" th:text="${color}"></option>
+                        </th:block>
+                    </select>
+
+                    <div class="quantity_class">
+                         <button type="button" id="minus_btn" class="btn btn-outline-dark" onclick="minus()">-</button>
+                        <input type="text" value="0" id="quantity" name="basket_quantity" style="width: 30px">
+                        <button type="button" id="plus_btn" class="btn btn-outline-dark" style="margin-left: 10px" onclick="plus()">+</button>
+                    </div>
+                    <hr>
+                    <div class="extended">
+                        <h2 class="extended price"><span id="extenedPrice"></span></h2>
+                    </div>
+
+                    <div class="btn-group">
+                        <button type="submit" id="basket_btn" class="btn btn-outline-primary btn-lg">장바구니</button>
+                        <button type="submit" id="order_btn" class="btn btn-outline-primary btn-lg">주문하기</button>
+                    </div>
                 </form>
             </div>
         </div>
@@ -107,17 +125,24 @@
         <row>
             <nav>
                 <div class="nav nav-tabs" id="nav-tab" role="tablist">
-                    <button class="nav-link active" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-home" type="button" role="tab" aria-controls="nav-home" aria-selected="true"><h3><b>상품 정보</b></h3></button>
-                    <button class="nav-link" id="nav-profile-tab" data-bs-toggle="tab" data-bs-target="#nav-profile" type="button" role="tab" aria-controls="nav-profile" aria-selected="false"><h3><b>리뷰</b></h3></button>
+                    <button class="nav-link active" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-home"
+                            type="button" role="tab" aria-controls="nav-home" aria-selected="true"><h3><b>상품 정보</b></h3>
+                    </button>
+                    <button class="nav-link" id="nav-profile-tab" data-bs-toggle="tab" data-bs-target="#nav-profile"
+                            type="button" role="tab" aria-controls="nav-profile" aria-selected="false"><h3><b>리뷰</b>
+                    </h3></button>
                 </div>
             </nav>
             <div class="tab-content" id="nav-tabContent">
-                <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab" tabindex="0">
+                <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab"
+                     tabindex="0">
                     <img th:src="${product.product_img2}">
 
                     <img th:src="${product.product_img3}">
                 </div>
-                <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab" tabindex="0">리뷰 다는곳</div>
+                <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab"
+                     tabindex="0">리뷰 다는곳
+                </div>
 
             </div>
         </row>
@@ -128,5 +153,55 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
+
+<script th:inline="javascript">
+    function plus(){
+        var num =document.getElementById("quantity");
+        if(num.value==0){
+            num.value=1;
+            document.getElementById("extenedPrice").innerHTML="총 금액 : " +[[${product.product_price}]];
+            return ;
+        }
+        num.value=parseInt(num.value)+1;
+        document.getElementById("extenedPrice").innerHTML="총 금액 : " +[[${product.product_price}]]*num.value;
+    }
+    function minus(){
+        var num =document.getElementById("quantity");
+        if(Number(num.value) >0){
+            num.value=parseInt(num.value)-1;
+            if(num.value==0){
+                document.getElementById("extenedPrice").innerHTML=""
+                return ;
+            }
+            document.getElementById("extenedPrice").innerHTML="총 금액 : " +[[${product.product_price}]]*num.value;
+
+        }
+
+    }
+
+    $(function (){
+        $('#basket_btn').click(function (){
+            if($('#size').val()=='size'){
+                alert('사이즈를 선택하세요');
+                return false;
+            }
+            if($('#color').val()=='color'){
+                alert("색상을 선택하세요");
+                return false;
+            }
+            if($('#quantity').val()==0){
+                alert("수량을 입력하세요");
+                return false;
+            }
+
+            alert("장바구니에 추가되었습니다");
+
+            $('form').attr('action','/user/basket_insert');
+        })
+    })
+
+
+</script>
+
 </body>
 </html>
