--- a/src/main/resources/templates/shopping/product_search.html
+++ b/src/main/resources/templates/shopping/product_search.html
@@ -8,12 +8,16 @@
     <meta name="generator" content="Hugo 0.88.1">
     <title>Album example · Bootstrap v5.1</title>
 
-    <link rel="canonical" href="https://getbootstrap.kr/docs/5.1/examples/album/">
-
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <!-- Favicons -->
+    <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+
+
+<!--
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    &lt;!&ndash; Favicons &ndash;&gt;
     <link rel="apple-touch-icon" href="/docs/5.1/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
     <link rel="icon" href="/docs/5.1/assets/img/favicons/favicon-32x32.png" sizes="32x32" type="image/png">
     <link rel="icon" href="/docs/5.1/assets/img/favicons/favicon-16x16.png" sizes="16x16" type="image/png">
@@ -22,6 +26,7 @@
     <link rel="icon" href="/docs/5.1/assets/img/favicons/favicon.ico">
     <meta name="theme-color" content="#7952b3">
 
+-->
 
     <style>
         .bd-placeholder-img {
@@ -78,27 +83,17 @@
 
 </head>
 <body>
-    <header th:if="${session.admin!=null}" th:insert="~{template/header :: admin_mainbar}"></header>
-    <header th:if="${session.user!=null}" th:insert="~{template/header :: user_mainbar}"></header>
-    <header th:if="${session.admin==null && session.user==null}" th:insert="~{template/header :: no_user_mainbar}"></header>
+<th:block th:unless="${session.isEmpty()}">
+    <header th:if="${session.admin==null}" th:insert="~{template/header :: user_mainbar}"></header>
+    <header th:if="${session.user==null}" th:insert="~{template/header :: admin_mainbar}"></header>
+</th:block>
+<header th:if="${session.admin!=null}" th:insert="~{template/header :: admin_mainbar}"></header>
+<header th:if="${session.user!=null}" th:insert="~{template/header :: user_mainbar}"></header>
+<header th:if="${session.admin==null && session.user==null}" th:insert="~{template/header :: no_user_mainbar}"></header>
 
 <main>
 
 
-    <section class="py-5 text-center container">
-        <div class="row py-lg-5">
-            <div class="col-lg-6 col-md-8 mx-auto">
-                <h1 class="fw-light">Album example</h1>
-                <p class="lead text-muted">Something short and leading about the collection below—its contents, the
-                    creator, etc. Make it short and sweet, but not too short so folks don’t simply skip over it
-                    entirely.</p>
-                <p>
-                    <a href="#" class="btn btn-primary my-2">Main call to action</a>
-                    <a href="#" class="btn btn-secondary my-2">Secondary action</a>
-                </p>
-            </div>
-        </div>
-    </section>
 
 
     <div class="album py-5 bg-light">
@@ -109,22 +104,22 @@
 
                 <div class="card" style="width: 18rem;" th:each="product:${list}">
                     <a th:href="@{/shopping/product_info(product_code=${product.product_code})}" style="height: 60%">
-                    <img th:src="${product.product_img1}" class="card-img-top" alt="..." style="height: 100%">
+                        <img th:src="${product.product_img1}" class="card-img-top" alt="..." style="height: 100%">
                     </a>
                     <div class="card-body">
                         <p class="card-text">
                         <p th:text="${product.product_name}"></p>
                         <b th:text="|${#numbers.formatInteger(product.product_price,3,'COMMA')} 원|"></b>
                         </p>
-                        <div class="btn-group" th:unless="${session.admin==null}">
+                        <div class="btn-group" th:if="${session.admin!=null}">
                             <form action="/admin/product/modify" method="post" >
                                 <input type="hidden" id="product_code" name="product_code"
                                        th:value="${product.product_code}">
 
                                 <button type="submit" id="modify_btn" class="btn btn-sm btn-outline-secondary"
-                                        >상품 관리
+                                >상품 관리
                                 </button>
-+
+                                +
                             </form>
                         </div>
 
@@ -153,21 +148,24 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
-<script>
-  /*  $(function () {
-        $('#modify_btn').click(function () {
-            $("form").attr("action", "/admin/product/modify");
-        })
-    })*/
 
-/*    $(function () {
-        $('.btn btn-sm btn-outline-secondary1').click(function () {
+<script>
+    /*$(function () {
+        $('#modify_btn').click(function () {
+
+            location.href="/admin/product/modify?product_code="+$('#product_code').val();
+        })
+
+        $('#del_btn').click(function () {
             if (!confirm("해당 상품을 삭제하시겠습니까?")) {
                 return false;
             }
             location.href="/admin/delete_product?product_code="+$('#product_code').val();
-
         })
+    })
+
+    $(function () {
+
     })*/
 </script>
 </body>
