--- a/src/main/resources/templates/template/nav_bar.html
+++ b/src/main/resources/templates/template/nav_bar.html
@@ -23,7 +23,7 @@
                 <ul class="dropdown-menu">
                     <li><a class="dropdown-item" th:href="@{/shopping/product_search(division_lType=상의)}">상의</a></li>
                     <li class="seperator"></li>
-                    <th:block th:each="list:${divisionList}">
+                    <th:block th:each="list:${session.divisionList}">
                     <li th:if="${list.division_lType=='상의'}">
                         <a class="dropdown-item" th:href="@{/shopping/product_search(division_mType=${list.division_mType})}"
                         th:text="${list.division_mType}">Action</a>
@@ -34,13 +34,13 @@
 
             <div class="dropdown">
                 <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    상의
+                    하의
                 </a>
 
                 <ul class="dropdown-menu">
                     <li><a class="dropdown-item" th:href="@{/shopping/product_search(division_lType=하의)}">하의</a></li>
                     <li class="seperator"></li>
-                    <th:block th:each="list:${divisionList}">
+                    <th:block th:each="list:${session.divisionList}">
                         <li th:if="${list.division_lType=='하의'}">
                             <a class="dropdown-item" th:href="@{/shopping/product_search(division_mType=${list.division_mType})}"
                                th:text="${list.division_mType}">Action</a>
@@ -57,7 +57,7 @@
                 <ul class="dropdown-menu">
                     <li><a class="dropdown-item" th:href="@{/shopping/product_search(division_lType=아우터)}">아우터</a></li>
                     <li class="seperator"></li>
-                    <th:block th:each="list:${divisionList}">
+                    <th:block th:each="list:${session.divisionList}">
                         <li th:if="${list.division_lType=='아우터'}">
                             <a class="dropdown-item" th:href="@{/shopping/product_search(division_mType=${list.division_mType})}"
                                th:text="${list.division_mType}">Action</a>
@@ -67,8 +67,8 @@
             </div>
 
 
-        <form class="d-flex">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <form class="d-flex" action="/shopping/product_search">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="search">
             <button class="btn btn-outline-success" type="submit">Search</button>
         </form>
         </ul>
