장바구니 삭제 , 장바구니 폼,장바구니 항목선택 시 총결제 금액 자동 변경 ,  결제 폼

--- a/src/main/resources/templates/template/nav_bar.html
+++ b/src/main/resources/templates/template/nav_bar.html
@@ -83,6 +83,9 @@
             border-top: 1px solid #ccc;
         }
 
+        .dropdown{
+            margin-right: 10px;
+        }
     </style>
 </div>
 </body>
