--- a/src/main/resources/templates/user/joinForm.html
+++ b/src/main/resources/templates/user/joinForm.html
@@ -50,11 +50,6 @@
          body {
              min-height: 150vh;
 
-             /*background: -webkit-gradient(linear, left bottom, right top, from(#92b5db), to(#1d466c));
-             background: -webkit-linear-gradient(bottom left, #92b5db 0%, #1d466c 100%);
-             background: -moz-linear-gradient(bottom left, #92b5db 0%, #1d466c 100%);
-             background: -o-linear-gradient(bottom left, #92b5db 0%, #1d466c 100%);
-             background: linear-gradient(to top right, #92b5db 0%, #1d466c 100%);*/
          }
 
         .input-form {
@@ -76,6 +71,9 @@
             border-color: #dc3545;
             color: #dc3545;
         }
+        header{
+            margin-bottom: 150px;
+        }
     </style>
 
 
@@ -84,19 +82,14 @@
 </head>
 <body>
 <main>
+
+    <header th:if="${session.admin!=null}" th:insert="~{template/header :: admin_mainbar}"></header>
+    <header th:if="${session.user!=null}" th:insert="~{template/header :: user_mainbar}"></header>
+    <header th:if="${session.admin==null && session.user==null}" th:insert="~{template/header :: no_user_mainbar}"></header>
+
     <div class="container">
         <div class="input-form-backgroud row" >
-            <h3>
-                <a href="/" class="navbar-brand d-flex align-items-center">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor"
-                         stroke-linecap="round" stroke-linejoin="round" stroke-width="2" aria-hidden="true" class="me-2"
-                         viewBox="0 0 24 24">
-                        <path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"/>
-                        <circle cx="12" cy="13" r="4"/>
-                    </svg>
-                    <strong>Album</strong>
-                </a>
-            </h3>
+
             <div class="input-form col-md-12 mx-auto">
                 <h4 class="mb-3">회원가입</h4>
                 <form class="validation-form" th:object="${user}" action="/user/join" method="post" novalidate>
