--- a/src/main/resources/templates/mypage/basket.html
+++ b/src/main/resources/templates/mypage/basket.html
@@ -9,13 +9,31 @@
             padding-top: 120px;
         }
 
-        #pay_div{
+        #pay_div {
             padding-top: 50px;
-
         }
 
-        .cartName{
+        .cartName {
             padding: 20px;
+        }
+
+        .img_tag {
+            width: 100px;
+            height: 100px;
+        }
+
+        .col {
+            float: left;
+            margin-right: 20px;
+        }
+
+        .price {
+            float: right;
+        }
+
+        .del_all {
+            margin-left: 20px;
+            margin-bottom: 10px;
         }
     </style>
 </head>
@@ -32,24 +50,43 @@
         <div class="col-md-6 mb-3">
             <div class="cartName">
                 <h2>장바구니</h2>
-
             </div>
-            <div class="card">
+            <form method="post" >
+            <div class="del_all">
+                <input type="checkbox" id="all_check" name="all_check" class="form-check-input">
+                <button type="submit" id="del_btn" class="btn btn-primary btn-sm">삭제</button>
+            </div>
+
+
+            <div class="card" th:each="list:${list}">
                 <div class="card-header">
-                    <input class="form-check-input" type="checkbox" value="" id="defaultCheck1">
+                    <input class="form-check-input" type="checkbox" name="basket_check" th:value="${list.basket_code}"
+                           id="basket_check">
+                    <input type="hidden" th:name="${list.basket_code}" th:value="${list.product_price}*${list.basket_quantity}">
                 </div>
                 <div class="card-body">
-                    <h5 class="card-title">Special title treatment</h5>
-                    <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                    <div class="col">
+                        <img class="img_tag" th:src="${list.product_img1}">
+                    </div>
+
+                    <div>
+                        <h6 class="fw-bold" th:text="${list.product_name}"></h6>
+                        <div class="fst-italic" th:text="|${list.size},${list.color} |"></div>
+                        <div class="fst-italic" th:text="|${list.basket_quantity} 개|"></div>
+                        <div class="price"  th:text="|${#numbers.formatInteger(list.product_price*list.basket_quantity,3,'COMMA')} 원|"></div>
+                    </div>
                 </div>
             </div>
 
             <div class="d-grid gap-2 col-6 mx-auto" id="pay_div">
 
-                <button type="button" class="btn btn-primary btn-lg">0원<br>구매</button>
+                <button type="submit" class="btn btn-primary btn-lg" id="order_btn" disabled>
+                    <b id="all_price">0</b> 원
+                    구매
+                </button>
             </div>
-
+                <input type="hidden" name="order_payment" value="0">
+            </form>
         </div>
     </div>
 
@@ -59,5 +96,81 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
+<script src="http://code.jquery.com/jquery-latest.min.js"></script>
+
+<script th:inline="javascript">
+
+
+
+    $(document).ready(function () {
+        $('input:checkbox[name="all_check"]').change(function () {
+            var all=true;
+            var price = 0;
+            if($('input:checkbox[name="all_check"]').is(":checked")==false){
+                $('input:checkbox[name="basket_check"]').each(function () {
+                    this.checked =false;
+
+                })
+                $('#order_btn').attr("disabled",true);
+            }else{
+                $('input:checkbox[name="basket_check"]').each(function () {
+                    this.checked =true;
+                    price=parseInt(price)+parseInt($('input:hidden[name="'+this.value+'"]').val());
+                })
+                $('#order_btn').attr("disabled",false);
+            }
+
+            document.getElementById('all_price').innerHTML=price;
+
+        })
+    })
+
+    $(function () {
+        $('#del_btn').click(function () {
+            $('input:checkbox[name="basket_check"]').each(function () {
+                if (this.checked == false) {
+                    this.val = "";
+                }
+            })
+            $('form').attr("action","/mypage/basket_delete");
+        })
+    })
+
+    $(function () {
+        $('#order_btn').click(function () {
+            $('input:checkbox[name="basket_check"]').each(function () {
+                if (this.checked == false) {
+                    this.val = "";
+                }
+            })
+            var money = document.getElementById('all_price').textContent;
+            $('input:hidden[name="order_payment"]').attr("value",money);
+            $('form').attr("action","/user/orderForm");
+        })
+
+    })
+    $(function (){
+        $('input:checkbox[name="basket_check"]').change(function () {
+            if($('input:checkbox[name="basket_check"]:checked').length>=1){
+                $('#order_btn').attr("disabled",false);
+            }else{
+                $('#order_btn').attr("disabled",true);
+            }
+            var result =$('#all_price').text();
+
+
+            var qq = $('input:hidden[name="'+this.value+'"]').val();
+
+            if(this.checked==false)qq=qq*(-1);
+
+            result= parseInt(result) + parseInt(qq) ;
+            document.getElementById('all_price').innerHTML=result
+;
+           /* $('#all_price').innerHTML=(this.checked==true?parseInt(result)+parseInt($('input:hidden[name="'+this.value+'"]').value):
+                parseInt(result)-parseInt($('input:hidden[name="'+this.value+'"]').value));*/
+        })
+    })
+
+</script>
 
 </html>
