--- a/src/main/resources/templates/user/findForm.html
+++ b/src/main/resources/templates/user/findForm.html
@@ -76,24 +76,23 @@
         .message_div{
             padding-bottom: 3px;
         }
+        header{
+            margin-bottom: 150px;
+        }
     </style>
 
 
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
 
 </head>
+<header th:if="${session.admin!=null}" th:insert="~{template/header :: admin_mainbar}"></header>
+<header th:if="${session.user!=null}" th:insert="~{template/header :: user_mainbar}"></header>
+<header th:if="${session.admin==null && session.user==null}" th:insert="~{template/header :: no_user_mainbar}"></header>
+
+
 <div class="container">
     <div class="input-form-backgroud row" >
-        <h3>
-            <a href="/" class="navbar-brand d-flex align-items-center">
-                <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor"
-                     stroke-linecap="round" stroke-linejoin="round" stroke-width="2" aria-hidden="true" class="me-2"
-                     viewBox="0 0 24 24">
-                    <path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"/>
-                    <circle cx="12" cy="13" r="4"/>
-                </svg>
-                <strong>Album</strong>
-            </a>
+
         </h3>
         <div class="input-form col-md-12 mx-auto">
             <h4 class="mb-3">본인 인증</h4>
