--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -74,6 +74,9 @@
         a{
             color: black;
         }
+        header{
+            margin-bottom: 150px;
+        }
 
     </style>
 
@@ -81,19 +84,16 @@
 </head>
 <body>
 
+<header th:if="${session.admin!=null}" th:insert="~{template/header :: admin_mainbar}"></header>
+<header th:if="${session.user!=null}" th:insert="~{template/header :: user_mainbar}"></header>
+<header th:if="${session.admin==null && session.user==null}" th:insert="~{template/header :: no_user_mainbar}"></header>
+
+
 <div class="container login-container">
     <div class="row">
         <div class="col-md-6 login-form-1">
             <h3>
-                <a href="/" class="navbar-brand d-flex align-items-center">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor"
-                         stroke-linecap="round" stroke-linejoin="round" stroke-width="2" aria-hidden="true" class="me-2"
-                         viewBox="0 0 24 24">
-                        <path d="M23 19a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h4l2-3h6l2 3h4a2 2 0 0 1 2 2z"/>
-                        <circle cx="12" cy="13" r="4"/>
-                    </svg>
-                    <strong>Album</strong>
-                </a>
+                <b>LOGIN</b>
             </h3>
             <form>
                 <div class="form-group">
