리뷰쓰기,변경 폼, 구매시 product테이블 판매량 증가,user테이블 결제금액 증가

--- a/src/main/resources/templates/template/mypageSidebar.html
+++ b/src/main/resources/templates/template/mypageSidebar.html
@@ -21,8 +21,8 @@
                         <li><a href="/mypage/account" class="link-dark rounded">계정 관리</a></li>
                         <li><a th:href="@{/mypage/enquiryList}" class="link-dark rounded">관리자 문의</a></li>
                         <li><a href="/mypage/basket" class="link-dark rounded">장바구니</a></li>
-                        <li><a href="#" class="link-dark rounded">상품 리뷰</a></li>
-                        <li><a href="#" class="link-dark rounded">주문 내역</a></li>
+                        <li><a href="/mypage/reviewList" class="link-dark rounded">상품 리뷰</a></li>
+                        <li><a href="/mypage/orderList" class="link-dark rounded">주문 내역</a></li>
 
 
                     </ul>
