--- a/src/main/resources/templates/user/orderForm.html
+++ b/src/main/resources/templates/user/orderForm.html
@@ -13,9 +13,7 @@
             width: 50px;
         }
 
-        #pay_div {
-            padding-top: 50px;
-        }
+
 
         .cartName {
             padding: 20px;
@@ -49,41 +47,42 @@
 </head>
 <body>
 <header th:insert="~{template/header :: user_mainbar}"></header>
-
+<form method="post" action="/user/product_order">
 <main>
     <div class="row">
         <!--사이드 바-->
         <div class="col-md-2 mb-3" th:insert="~{template/mypageSidebar ::mypage_sidebar}">
         </div>
 
-        <!--본문-->
-        <div class="col-md-6 mb-3">
-            <div class="cartName">
-                <h2>주문</h2>
-            </div>
-            <div class="card" th:each="list:${list}">
-                <div class="card-body">
-                    <div class="col">
-                        <img class="img_tag" th:src="${list.product_img1}">
-                    </div>
-                    <div>
-                        <h6 class="fw-bold" th:text="${list.product_name}"></h6>
-                        <div class="fst-italic" th:text="|${list.size},${list.color} |"></div>
-                        <div class="fst-italic" th:text="|${list.basket_quantity} 개|"></div>
-                        <div class="price"
-                             th:text="|${#numbers.formatInteger(list.product_price*list.basket_quantity,3,'COMMA')} 원|"></div>
+            <!--본문-->
+            <div class="col-md-6 mb-3">
+                <div class="cartName">
+                    <h2>주문</h2>
+                </div>
+                <div class="card" th:each="list:${list}">
+                    <div class="card-body">
+                        <div class="col">
+                            <img class="img_tag" th:src="${list.product_img1}">
+                            <input type="hidden" name="detail_codeList" th:value="${list.detail_code}">
+                        </div>
+                        <div>
+                            <h6 class="fw-bold" th:text="${list.product_name}"></h6>
+                            <div class="fst-italic" th:text="|${list.size},${list.color} |"></div>
+                            <div class="fst-italic" th:text="|${list.basket_quantity} 개|"></div>
+                            <div class="price"
+                                 th:text="|${#numbers.formatInteger(list.product_price*list.basket_quantity,3,'COMMA')} 원|"></div>
+                        </div>
                     </div>
                 </div>
-            </div>
 
 
-            <div class="order_form">
-                <form method="post" action="user/product_buy">
+                <div class="order_form">
+
                     <input type="hidden" name="user_code" th:value="${session.user.user_code}">
                     <h2>주문 정보</h2>
                     <div class="form-floating">
                         <input type="text" class="form-control" id="order_name" name="order_name" placeholder="이름"
-                               th:value="${session.user.user_name}" disabled>
+                               th:value="${session.user.user_name}">
                         <label for="order_name">name</label>
                     </div>
 
@@ -100,13 +99,13 @@
                     </div>
                     <div class="form-floating">
                         <input type="text" class="form-control" id="order_addr2" name="order_addr2"
-                               th:value="${session.user.user_addr2}" placeholder="Password">
+                               th:value="${session.user.user_addr2}" placeholder="상세주소">
                         <label for="order_addr2">상세 주소</label>
                     </div>
 
                     <div class="form-floating">
                         <input type="text" class="form-control" id="order_request" name="order_request"
-                               placeholder="Password">
+                               placeholder="요청사항">
                         <label for="order_request">요청 사항</label>
                     </div>
 
@@ -116,15 +115,18 @@
                                disabled>
                         <label for="all_price">가격</label>
                     </div>
-                    <input type="hidden" name="order_payment" th:value="${order_payment}">
-                    <input type="hidden" name="order_number" >
+
+                    <input type="hidden" name="order_number">
                     <button class="btn btn-primary btn-lg" type="button" id="order_btn"
-                    onclick="requestPay(this.form)">결제하기</button>
-                </form>
+                            onclick="requestPay(this.form)">결제하기
+                    </button>
+
+                </div>
             </div>
-        </div>
     </div>
+
 </main>
+</form>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
@@ -134,33 +136,33 @@
 <script th:inline="javascript">
 
 
-
     var IMP = window.IMP;
     IMP.init("imp34306335");
-    function requestPay(form){
-            var number =Date.now();
-            // IMP.request_pay(param, callback) 결제창 호출
-            IMP.request_pay({ // param
-                pg: "kakaopay",
-                pay_method: "kakaopay",
-                merchant_uid:number,
-                name: "결제",
-                amount: 1,
-                buyer_email: "gildong@gmail.com",
-                buyer_name: "홍길동",
-                buyer_tel: "010-4242-4242",
-                buyer_addr: "서울특별시 강남구 신사동",
-                buyer_postcode: "01181"
-            }, function (rsp) { // callback
-                if (rsp.success) {
-                    $('input:hidden[name="order_number"]').attr("value",number);
-                    form.submit();
 
-                } else {
-                    alert("결제가 취소되었습니다");
-                    return false;
-                }
-            });
+    function requestPay(form) {
+        var number = Date.now();
+        // IMP.request_pay(param, callback) 결제창 호출
+        IMP.request_pay({ // param
+            pg: "kakaopay",
+            pay_method: "kakaopay",
+            merchant_uid: number,
+            name: "결제",
+            amount: 1,
+            buyer_email: "gildong@gmail.com",
+            buyer_name: "홍길동",
+            buyer_tel: "010-4242-4242",
+            buyer_addr: "서울특별시 강남구 신사동",
+            buyer_postcode: "01181"
+        }, function (rsp) { // callback
+            if (rsp.success) {
+                $('input:hidden[name="order_number"]').attr("value", number);
+                form.submit();
+
+            } else {
+                alert("결제가 취소되었습니다");
+                return false;
+            }
+        });
     }
 
 </script>
