--- a/src/main/resources/templates/mypage/reviewList.html
+++ b/src/main/resources/templates/mypage/reviewList.html
@@ -109,7 +109,7 @@
                             <th:block th:if="${list.review_status==1}">
                                 <div class="card-header">
                                     <div class="a_tag">
-                                        <a th:href="@{/mypage/reviewForm(order_code=${list.order_code})}"
+                                        <a th:href="@{/mypage/review_modify(order_code=${list.order_code})}"
                                            class="btn btn-primary btn-sm">리뷰 변경</a>
                                     </div>
                                 </div>
