--- a/src/main/resources/templates/template/admin_sidebar.html
+++ b/src/main/resources/templates/template/admin_sidebar.html
@@ -20,7 +20,7 @@
                     <ul class="btn-toggle-nav list-unstyled fw-normal pb-1 small">
                         <li><a href="/admin/recent_register" class="link-dark rounded">최근 등록 상품</a></li>
                         <li><a href="/admin/product/add" class="link-dark rounded">상품등록</a></li>
-                        <li><a href="/admin/modify_delete" class="link-dark rounded">상품 수정/삭제</a></li>
+                        <li><a href="/admin/sales_status" class="link-dark rounded">판매 현황</a></li>
                         <li><a href="/admin/enquiryList" class="link-dark rounded">문의사항</a></li>
                     </ul>
                 </div>
