controller,service,repository 실행되는 log를 남기는 aop 적용 , 프로젝트 메인로고이미지 적용

--- a/src/main/resources/templates/admin/loginForm.html
+++ b/src/main/resources/templates/admin/loginForm.html
@@ -97,7 +97,7 @@
                     <strong>Album</strong>
                 </a>
             </h3>
-            <form action="/admin/Login" method="post" th:object="${admin}">
+            <form action="/admin/login" method="post" th:object="${admin}">
                 <div class="form-group">
                     <label for="admin_id">아이디</label>
                     <input type="text" class="form-control" id="admin_id" th:field="*{admin_id}"
