상품 상세 폼에서 주문하기 버튼 장바구니를 거치지 않고 바로 주문폼으로 이동

--- a/src/main/resources/templates/admin/recent_register.html
+++ b/src/main/resources/templates/admin/recent_register.html
@@ -73,12 +73,14 @@
                             <b th:text="|${#numbers.formatInteger(product.product_price,3,'COMMA')} 원|"></b>
                             </p>
                             <div class="btn-group">
-                                <form method="post">
-                                    <input type="hidden" id="product_code" name="product_code" th:value="${product.product_code}">
+                                <form action="/admin/product/modify" method="post" >
+                                    <input type="hidden" id="product_code" name="product_code"
+                                           th:value="${product.product_code}">
 
-                                    <button type="submit" id="modify_btn" class="btn btn-sm btn-outline-secondary">상품 수정</button>
-
-                                <button type="submit" id="del_btn" class="btn btn-sm btn-outline-secondary">상품 삭제</button>
+                                    <button type="submit" id="modify_btn" class="btn btn-sm btn-outline-secondary"
+                                    >상품 관리
+                                    </button>
+                                    +
                                 </form>
                             </div>
 
